# freecad-sketch-reader

./: .gitignore  PLAN.md  README.rst  RELEASE.rst  pyproject.toml  release.sh
.github/workflows/: test.yml
src/freecad_sketch_reader/: __init__.py  enums.py  models.py  parser.py
tests/: BSplines.FCStd  Misc.FCStd  test_bsplines.py  test_reader.py
tests/Misc.FCStd.unpacked/: Document.xml  GuiDocument.xml  Sketch.Shape.Map.txt  Sketch.Shape.brp
