[project]
name = "freecad-sketch-reader"
version = "0.1.0"
description = "Read Sketch objects from FreeCAD .FCStd files"
readme = "README.rst"
license = {text = "LGPL-2.1-or-later"}
authors = [
    { name = "Luke Plant", email = "luke@lukeplant.me.uk" }
]
requires-python = ">=3.12"
dependencies = []
keywords = [
  "FreeCAD",
  "geometry",
  "sketches",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
